# Static-Vector

./: CMakeLists.txt  README.md
include/: staticvector.hpp
tests/: CMakeLists.txt  tests.cpp
